[gd_scene load_steps=14 format=3 uid="uid://br14tmcem027e"]

[ext_resource type="Script" path="res://Scripts/Enemies/balkerie.gd" id="1_r46kj"]
[ext_resource type="Texture2D" uid="uid://cpvuiuu4utypu" path="res://Graphics/Enemies/Balkerie.png" id="2_10bre"]
[ext_resource type="Texture2D" uid="uid://clihuhs0po6p0" path="res://Graphics/Enemies/BuzzerFlame.png" id="3_kegpg"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(52, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpn7a"]
atlas = ExtResource("3_kegpg")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc8ms"]
atlas = ExtResource("3_kegpg")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8gl0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpn7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc8ms")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_cnx6m"]
resource_name = "Fly"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balkerie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_i4237"]
resource_name = "Launch"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balkerie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_2l24n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balkerie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fiai7"]
resource_name = "Waiting"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balkerie:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6eml"]
_data = {
"Fly": SubResource("Animation_cnx6m"),
"Launch": SubResource("Animation_i4237"),
"RESET": SubResource("Animation_2l24n"),
"Wait": SubResource("Animation_fiai7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c8hw"]
size = Vector2(256, 112)

[node name="Balkerie" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16384
collision_mask = 0
script = ExtResource("1_r46kj")

[node name="CollissionMask" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 528384

[node name="HitBox" type="CollisionShape2D" parent="DamageArea"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="Balkerie" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("2_10bre")
vframes = 3

[node name="Fire" type="AnimatedSprite2D" parent="Balkerie"]
visible = false
position = Vector2(31, -2)
sprite_frames = SubResource("SpriteFrames_b8gl0")
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m6eml")
}
autoplay = "Wait"

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
position = Vector2(1.90735e-06, -1.90735e-06)
rect = Rect2(-160, -120, 320, 240)

[node name="PlayerSensor" type="Node2D" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="PlayerSensor"]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor/Area2D"]
position = Vector2(0, -48)
shape = SubResource("RectangleShape2D_4c8hw")

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerSensor/Area2D" to="." method="_on_area_2d_body_entered"]
